Ret 3670. Reformat application details to be in one aligned table. (#1033)
* Remove outdated apitest property (#891)

* Filter by Rule 92

* Add unit tests

* Add test coverage

* Modify param

* fixed conflict

* RET-3335 add null checks for supportingMaterial

* Add respondent upload to the document collection

* Fixed PMD and updated dev properties to use new templates ids

* Added missing properties

* Remove long qualifier

* Bump chart

* Added missing template id and refactored some template names

* Bumping chart version/ fixing aliases

* Fix imports

* Fix pmd

* Refactored code

* Rolled back changes

* Added GodClass pmd exclusion for tests

* RET-3278: Fixed missing field data in Record a Decision (#917)

* RET-3549: Aligning multiple file uploads for applications and notifications

* tidy up

* fixup

* bump data-model

* test with 2.0.0-3549

* bump data-model ver

* pr comments

* fixes

* fix

* RET-3253 refactored applcationDesicion code,added it to viewapplication

* RET-3549: Aligning multiple file uploads for applications and notifications (#922)

* RET-3549: Falling back to display basic file link when metadata cannot be reached (#933)

* RET-3549: Falling back to display basic file link when metadata cannot be reached

* Bumping chart version/ fixing aliases

---------

Co-authored-by: hmcts-jenkins-d-to-i <62423932+hmcts-jenkins-d-to-i[bot]@users.noreply.github.com>

* RET-3253 fix pmd issues

* fix

* RET-3253 review comments

* RET-3253 update tests

* RET-3253 updated code to show 2 decisions

* RET-3253 update unit tests

* Fix compilation error (#939)

* bump chart ver

* Remove unneeded document_management.caseWorkerRole property (#944)

* Remove unneeded document_management.caseWorkerRole property

* Bumping chart version/ fixing aliases

* Fix functional test

---------

Co-authored-by: hmcts-jenkins-d-to-i <62423932+hmcts-jenkins-d-to-i[